--- a/Ingenio.PortalWebExterno/Views/Home/QuienesSomos.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/QuienesSomos.cshtml
@@ -7,124 +7,71 @@
 
 }
 <!-- estilo contenido -->
-@*
-    <style>
-        .contenido {
-            background-image: url(/img/texture-bw.png);
-            padding-top: 20px;
-            padding-bottom: 50px;
-            -webkit-box-shadow: 3px 6px 37px 4px rgba(0,0,0,0.75);
-            -moz-box-shadow: 3px 6px 37px 4px rgba(0,0,0,0.75);
-            box-shadow: 3px 6px 37px 4px rgba(0,0,0,0.75);
-        }
-    </style>*@ <!-- FONDO CON TEXTURA GRIS PARA EL TEXTO -->
-
-<script type="text/javascript">
-    var _smartsupp = _smartsupp || {};
-    _smartsupp.key = 'b7e1cad8ae31b522b9a3b64e60182dc54a8c7acb';
-    window.smartsupp || (function (d) {
-        var s, c, o = smartsupp = function () { o._.push(arguments) }; o._ = [];
-        s = d.getElementsByTagName('script')[0]; c = d.createElement('script');
-        c.type = 'text/javascript'; c.charset = 'utf-8'; c.async = true;
-        c.src = 'https://www.smartsuppchat.com/loader.js?'; s.parentNode.insertBefore(c, s);
-    })(document);
-</script>
-
 <!-- estilo para imagen con parallax-->
 <link rel="stylesheet" type="text/css" href="~/Content/parallax.css">
 
-<style>
-
-    .item-quienessomos, .item-quienessomos a{
-        border:none !important;
-        
-    }
-    .item-quienessomos {
-        background: #E1852C;
-    }
-
-    .item-quienessomos a {
-        color:black;
-        font-weight:400;
-        font-size: 19px;
-    }
-
-    .item-quienessomos:hover{
-        background:#bf640b;        
-    }
-    .item-quienessomos.active {
-        background: white;        
-        text-decoration: underline;
-
-    }
-    .item-quienessomos.active a {
-        color: black;
-        font-weight: 500;
-        
-    }
-
-
-    .text-justify {
-        font-size: 18px;
-    }
-</style>
 
 <!-- imagen fondo1-->
 @*<div class="parallaxbox" id="pb0" style="background-image: url('/img/fondos/Nuestra Coop.jpg');"> </div>*@
 <!-- contenido-->
 
-<section class="contenido"> 
+<section class="contenido">
     <div class="container" style="background-color: rgba(255, 255, 255, 0.8); ">
-        <ul class="nav nav-tabs" style="background-color: #ffffff ">
-            <li id="quienS" class="item-quienessomos active" ><a id="an" href="#quienesSomos" data-toggle="tab">Quienes Somos</a></li>
-            <li id="resena" class="item-quienessomos"><a id="an" data-toggle="tab" href="#resenaHistorica">Reseña Histórica</a></li>
-            <li id="misio" class="item-quienessomos"><a id="an" data-toggle="tab" href="#mision">Misión</a></li>
-            <li id="visio" class="item-quienessomos"><a id="an" data-toggle="tab" href="#vision">Visión</a></li>
-
-        </ul>
+        @*<ul class="nav nav-tabs" style="background-color: #ffffff ">*@
+        <div class="quienes_somos_container">
+            <div id="quienS" class="item-quienessomos active"><a id="an" href="#quienesSomos" data-toggle="tab">Quienes Somos</a></div>
+            <div id="resena" class="item-quienessomos"><a id="an" data-toggle="tab" href="#resenaHistorica">Reseña Histórica</a></div>
+            <div id="misio" class="item-quienessomos"><a id="an" data-toggle="tab" href="#mision">Misión</a></div>
+            <div id="visio" class="item-quienessomos"><a id="an" data-toggle="tab" href="#vision">Visión</a></div>
+        </div>
+        @*</ul>*@
 
         <div class="tab-content" style="background-color: rgba(255, 255, 255, 0.8);">
             <div class="tab-pane active" id="quienesSomos">
 
                 <div class="heading">
-                    <h2>Quienes Somos</h2>                       
+                    <h2>SOMOS...</h2>
                 </div>
-                <ul class="text-justify">
-                    <li>
-                        Somos una empresa nariñense de carácter privado, sin ánimo de lucro y de servicio social, fundada el 4 de Julio de 1.964.
-                    </li>
-                    <li>Somos una Cooperativa de Ahorro y Crédito con 58 años de existencia in-interrumpida en el sector de la Economía Solidaria con amplia cobertura en el sur occidente del país.</li>
-                    <li>
-                        Una empresa vigilada por la Superintendencia de la Economía Solidaria -  SUPERSOLIDARIA.
-
-                    </li>
-                    <li>
-                        Somos una empresa Respaldada por el Fondo de Garantías FOGACOOP.
-
-                    </li>
-                    <li>“Cofinal es impulsor de desarrollo socioenconómico del suroccidente Colombiano a través de servicios cooperativos de ahorro y crédito; sirviendo con responsabilidad y confianza mutua, generamos bienestar a nuestros asociados ”</li>
-                </ul>
-
+                <div class="">
+                    <p class="text-justify">
+                        Una empresa nariñense de carácter privado, sin ánimo de lucro y de servicio social, fundada el 4 de Julio de 1.964.
+                        <br>
+                        <br>
+                        Una Cooperativa de Ahorro y Crédito con 58 años de existencia en el sector de la Economía Solidaria.
+                        <br>
+                        <br>
+                        Una empresa vigilada, inspeccionada y controlada por la Superintendencia de la Economía Solidaria – “SUPERSOLIDARIA”
+                        <br>
+                        <br>
+                        Una empresa donde los ahorros de los asociados se encuentran protegidos por el Fondo de Garantías de Entidades Cooperativas “FOGACOOP”.
+                        <br>
+                        <br>
+                        Es impulsor del desarrollo socioeconómico del suroccidente Colombiano a través de servicios cooperativos de ahorro y crédito.
+                    </p>
+                    <img />
+                </div>
             </div>
             <div class="tab-pane " id="resenaHistorica">
                 <div class="heading">
-                    <h2>Reseña Histórica</h2>                   
+                    <h2>Reseña Histórica</h2>
                 </div>
-                <p class="text-justify">
-                    En el enigmático y bello sur de Colombia y mas exáctamente en la serena y plácida ciudad de Pasto,
-                    el 30 de Abril de 1964 se hace el reconocimiento de la personería Jurídica a nuestra importante cooperativa hoy llamada COFINAL.<br /><br />
+                <p>
+                    En el enigmático y bello sur de Colombia y mas exactamente en la serena y plácida ciudad de Pasto, el 4 de julio de
+                    1964 se hace el reconocimiento de la personería Jurídica a nuestra importante cooperativa hoy llamada COFINAL.<br><br>
 
-                    La Epoca de fundación de COFINAL, los años sesenta, fue marcada por grandes y definitivos acontecimientos
-                    que vale la pena resaltar como el invento de la pildora, la aparicion de la mini falda y el bikini,
-                    la primavera de Praga, el mayo de Paris, el primer viaje a la luna, la música sugerente y perene de los Beatles,
-                    la primera visita de un Papa a Colombia y con mucha satisfacción y orgullo, la simiente de la mejor cooperativa
-                    del suroccidente colombiano, llamada en ese entonces COOEDUCADOR.<br /><br />
+                    Los años sesenta fueron marcados por grandes y definitivos acontecimientos que vale la pena resaltar: el invento de
+                    la píldora, la aparición de la mini falda y el bikini, la primavera de Praga, el mayo de Paris, el primer viaje del hombre a
+                    la luna, la música sugerente y perenne de los Beatles, la primera visita de un Papa a Colombia y con mucha satisfacción y orgullo,
+                    la fundación de la cooperativa COOEDUCADOR, por iniciativa de 58 docentes de la institución educativa San Juan Bosco, que vieron en
+                    la asociatividad, una verdadera alternativa para colmar las necesidades económicas, sociales, entre otras, de las personas
+                    pertenecientes al sector educativo<br><br>
 
-                    Efectivamente, COFINAL irrumpió en el panorama financiero del sur de Colombia hace 58 años, por iniciativa de un grupo de 58 docentes
-                    impulsados por un plausible deseo de solidaridad y por la difícil  situación económica que padecían los educadores  cuyos salarios
-                    se cancelaban con recursos de la incipiente Industria Licorera de Nariño, y a veces, en rama, pero sobre todo cumpliendo el postulado
-                    cristiano de ayudarse los unos a los otros.
+                    En el año 1995  se cambia la razón social de Coeducador a lo que hoy conocemos como Cofinal y, abre su vinculo permitiendo así
+                    la vinculación de personas dedicadas a diferentes actividades económicas.<br><br>
 
+                    Hoy ofrece cobertura con oficinas propias en los departamentos de Nariño, Valle, Cauca y Putumayo, y a nivel nacional hace parte
+                    de la red Visionamos que congrega mas de 120 cooperativas a nivel nacional, en las cuales los asociados de Cofinal pueden realizar
+                    sus transacciones.
                 </p>
 
             </div>
@@ -203,48 +150,68 @@
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ff5500" fill-opacity="1" d="M0,32L120,74.7C240,117,480,203,720,202.7C960,203,1200,117,1320,74.7L1440,32L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path></svg>
 </div>
 
-    <style>
-        .maps iframe {
-            pointer-events: none;
-        }
-    </style>
+<style>
+    .maps iframe {
+        pointer-events: none;
+    }
+</style>
 
-    <!--<div class='embed-container  maps'>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.9160578226433!2d-77.28225128580804!3d1.2185285623241011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e2ed487375d6129%3A0x75d762a9f2c9e3da!2sCOFINAL!5e0!3m2!1ses!2sit!4v1454678597238" height="350" frameborder="0" style="border: 0; width: 100%;" allowfullscreen></iframe>
-    </div>-->
-    <!-- scrip para parallax-->
-    <script type="text/javascript">
-        function parallax() {
-            setpos("#pb0");
-            setpos("#pb1");
+<!--<div class='embed-container  maps'>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.9160578226433!2d-77.28225128580804!3d1.2185285623241011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e2ed487375d6129%3A0x75d762a9f2c9e3da!2sCOFINAL!5e0!3m2!1ses!2sit!4v1454678597238" height="350" frameborder="0" style="border: 0; width: 100%;" allowfullscreen></iframe>
+</div>-->
+<!-- scrip para parallax-->
+@*<script type="text/javascript">
+    function parallax() {
+        setpos("#pb0");
+        setpos("#pb1");
 
-        }
+    }
 
+    function setpos(element, factor) {
+        factor = factor || 2;
 
+        var offset = $(element).offset();
+        var w = $(window);
 
-        function setpos(element, factor) {
-            factor = factor || 2;
+        var posx = (offset.left - w.scrollLeft()) / factor;
+        var posy = (offset.top - w.scrollTop()) / factor;
 
-            var offset = $(element).offset();
-            var w = $(window);
+        $(element).css('background-position', '100% ' + posy + 'px');
 
-            var posx = (offset.left - w.scrollLeft()) / factor;
-            var posy = (offset.top - w.scrollTop()) / factor;
+        // use this to have parralax scrolling vertical and horizontal
+        //$(element).css('background-position', posx+'px '+posy+'px');
+    }
 
-            $(element).css('background-position', '100% ' + posy + 'px');
+    $(document).ready(function () {
+        parallax();
+    }).scroll(function () {
+        parallax();
+    });
+</script>*@
 
-            // use this to have parralax scrolling vertical and horizontal
-            //$(element).css('background-position', posx+'px '+posy+'px');
-        }
+<script>
+    const list__somos = document.querySelectorAll(".item-quienessomos");
 
-        $(document).ready(function () {
-            parallax();
-        }).scroll(function () {
-            parallax();
+    document.querySelectorAll(".item-quienessomos").forEach((somos) => {
+        somos.addEventListener("click", () => {
+            list__somos.forEach(somosT => somosT.classList.remove('active'));
+            //console.log(agencia.id);
+            somos.classList.add('active');
+            //document.querySelectorAll(".tab-pane").forEach((item) => {
+            //    item.classList.remove('active');
+            //    //console.log(item.classList);
+            //    //console.log(agencia)
+            //    //console.log(item.id);
+            //    //console.log(item);
+            //    const agencia_lugar = `${agencia.id}_Agencia`
+            //    if (item.id == agencia_lugar) {
+            //        //console.log(item.id)
+            //        item.classList.add('active');
+            //    }
+            //})
         });
-    </script>
-
-
+    })
+</script>
 
 
 
