--- a/Ingenio.PortalWebExterno/Views/Shared/Footer.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Shared/Footer.cshtml
@@ -28,12 +28,23 @@
                                 <i class="fa fa-youtube-play" aria-hidden="true"></i>
                             </a>
                         </li>
-                        
+
                     </ul>
                 </div>
+                <section class="col-12 col-md-7">
+                    <a href="~/Formatos/FORMATOS POLITICA/Politicas_T_DP.pdf">
+                        Tratamiendo de Politicas Personales
+                    </a>
+                    <div>Politicas del sitio</div>
+                    <div>Politicas del privacidad</div>
+                    <div>Protección de datos personales</div>
+                    <div>Indicadores economicos</div>
+                </section>
                 <div class="col-12 col-md-7">
                     <img src="~/img/logo_cofinal_white.png" class="image-cofinal-white" />
                 </div>
+
+
             </div>
         </div>
     </div>
