--- a/Ingenio.PortalWebExterno/Views/Shared/Navbar.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Shared/Navbar.cshtml
@@ -119,6 +119,12 @@
                                 <li>
                                     <a href="~/Home/Seguros">SEGUROS</a>
                                 </li>
+                                <li>
+                                    <a href="~/Home/ConveniosC">CONVENIOS Y SEGUROS</a>
+                                </li>
+                                <li>
+                                    <a href="~/Home/CanalesPago">PAGOS</a>
+                                </li>
                             </ul>
                         </li>
                         <li id="afiliacion" class="dropdown">
