--- a/Ingenio.PortalWebExterno/Content/sass/abstracts/_colors.scss
+++ b/Ingenio.PortalWebExterno/Content/sass/abstracts/_colors.scss
@@ -1,5 +1,6 @@
 ﻿$primary-color: rgba(224, 85, 20, 0.75);
 $secondary-color: rgba(236, 28, 36, 0.75);
+$third-color: rgba(246, 146, 31, 0.8) ;
 $secondary-color-sombra: rgba(236, 28, 36, 0.5);
 $sombras-color: rgba(0, 0, 0, 0.5);
 $light-color: rgba(255, 255, 255, 1);
