--- a/Ingenio.PortalWebExterno/Content/style.red.css
+++ b/Ingenio.PortalWebExterno/Content/style.red.css
@@ -2499,7 +2499,7 @@ fieldset[disabled] .btn-template-primary.active {
 #heading-breadcrumbs {
     background: linear-gradient( to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../../img/Img_Web2/background-credito.jpg);
     padding: 40px 0;
-    margin-bottom: 40px;
+    /*margin-bottom: 40px;*/
 }
 
 #heading-breadcrumbs.no-mb {
@@ -3793,7 +3793,7 @@ fieldset[disabled] .btn-template-primary.active {
 }
 
 .tab-content {
-  padding: 15px;
+  padding: 15px 30px;
   margin-top: 3px;
   border: solid 2px #ddd;
   /*border-top: none;*/
